[package]
name = "producer-consumer-opt"
version = "0.1.0"
authors = ["Jeff Zarnett <jzarnett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
rand = "0.7.3"
tokio = { version = "1.8.4", features = ["sync"] }
futures = "0.3.6"
