[package]
name = "nbody-cuda-grid"
version = "0.1.0"
authors = ["Jeff Zarnett <jzarnett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1.2"
rustacuda_derive = "0.1"
rustacuda_core = "0.1"
cuda-sys = "0.2.0"
rand = "0.7.3"
